[gd_scene load_steps=8 format=2]

[ext_resource path="res://scripts/Powerup.gd" type="Script" id=1]
[ext_resource path="res://assets/clock.png" type="Texture" id=2]
[ext_resource path="res://assets/pow/shadow_bottle.png" type="Texture" id=3]

[sub_resource type="Animation" id=1]
resource_name = "blink"

[sub_resource type="Animation" id=2]
length = 2.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.0313168, 1, 2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, -3 ), Vector2( 0, 0 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "fade"
length = 3.0
tracks/0/type = "value"
tracks/0/path = NodePath(".:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1, 1.5, 1.8, 2, 2.2, 2.4, 2.6, 2.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ true, false, true, false, true, false, true, false, true, false ]
}

[sub_resource type="CapsuleShape2D" id=4]
radius = 12.6133
height = 0.56908

[node name="Clock" type="Area2D" groups=[
"clock",
]]
position = Vector2( 34.287, 30.219 )
script = ExtResource( 1 )

[node name="Bottle" type="Sprite" parent="."]
scale = Vector2( 2.5, 2.5 )
texture = ExtResource( 2 )

[node name="Shadow" type="Sprite" parent="Bottle"]
position = Vector2( 0.0615997, 7.59787 )
scale = Vector2( 2.5, 0.973 )
texture = ExtResource( 3 )

[node name="anim" type="AnimationPlayer" parent="Bottle"]
autoplay = "idle"
anims/blink = SubResource( 1 )
anims/idle = SubResource( 2 )

[node name="anim_fade" type="AnimationPlayer" parent="Bottle"]
anims/fade = SubResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0.440125, 0.661278 )
shape = SubResource( 4 )

[node name="TweenPickup" type="Tween" parent="."]

[node name="LifeTime" type="Timer" parent="."]
wait_time = 5.0
one_shot = true
autostart = true

[node name="Timer" type="Timer" parent="."]
autostart = true
[connection signal="tween_completed" from="TweenPickup" to="." method="_on_TweenPickup_TweenPickup_completed"]
[connection signal="timeout" from="LifeTime" to="." method="_on_LifeTime_timeout"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
